# psdfile-python

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  vcpkg.json
python/psdfile/: __init__.py  parser.py
src/: bindings.cpp
