[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "psdfile"
version = "0.1.0"
description = "Python bindings for the psdparse library to parse PSD files."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy>=1.17.0"
]
